--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,3 +8,19 @@
 @import 'additional-styles/flatpickr.css';
 
 @import 'tailwindcss/utilities';
+
+.sticky-header {
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+    z-index: 10;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .sticky-filter {
+    position: sticky;
+    top: 25px; /* Adjust based on the height of the first header row */
+    background-color: #fff;
+    z-index: 10;
+    border-bottom: 1px solid #ccc;
+  }
